--- a/src/components/Pages/SectorsPage/SectorChart.css
+++ b/src/components/Pages/SectorsPage/SectorChart.css
@@ -14,18 +14,21 @@
     border-radius: 8px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); /* Optional shadow */
 }
-
 .chart-legend {
     position: absolute;
-    left: 15px;
-    bottom: 10px;
-    z-index: 1;
-    font-size: 14px;
-    font-family: sans-serif;
-    line-height: 18px;
-    font-weight: 300;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.6);
-    padding: 8px;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    flex-direction: column; /* Stack the labels vertically */
+    gap: 4px; /* Add space between each label */
+    z-index: 10;
+}
+
+.legend-box {
+    background-color: rgba(0, 0, 0, 0.8); /* Dark background with transparency */
+    padding: 5px 10px;
     border-radius: 5px;
+    font-size: 12px;
+    white-space: nowrap;
+    color: white;
 }
