--- a/src/components/PositionsComponent/Positions.css
+++ b/src/components/PositionsComponent/Positions.css
@@ -1,12 +1,16 @@
 .positions-container {
   width: 100%;
-  max-width: 1200px; /* Ensure it's not too wide */
- 
+  max-width: 100%; /* Ensure it's not too wide */
   padding: 20px;
   box-sizing: border-box;
   background-color: #0d0d1b; /* Match the dark background */
   color: white; /* White text for visibility */
   border-radius: 8px; /* Rounded corners */
+  background-color: #0d0d1b;
+  padding: 10px;
+  border-radius: 10px;
+  
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .positions-title {
@@ -95,4 +99,22 @@
 
 .add-ticker-button:hover {
   background-color: #059669; /* Darker green on hover */
+}
+
+.save-button {
+  width: 100%;
+  padding: 0.5rem 1rem;
+  margin-top: 1rem;
+  border: none;
+  border-radius: 0.375rem;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #fff;
+  background-color: #4caf50; /* Green color */
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.save-button:hover {
+  background-color: #45a049; /* Darker green */
 }
