--- a/src/components/Pages/SectorsPage/SectorChart.css
+++ b/src/components/Pages/SectorsPage/SectorChart.css
@@ -10,7 +10,7 @@
 .chart-container {
     width: 99%;
     height: 550px; /* Adjust height as needed */
-    background-color: #1e1e1e;
+   /* background-color: #1e1e1e; */
     border-radius: 8px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); /* Optional shadow */
 }
