--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body, .main-container, .dashboard {
   background-color: #0d0d1b; /* Ensure this matches your desired color */
-  color: #ffffff; /* Optional: set the text color to white */
+  color: #000; /* Optional: set the text color to white */
+  overflow: auto;
 }
 
 .main-container {
@@ -16,7 +17,7 @@ body, .main-container, .dashboard {
   justify-content: flex-start;
   align-items: stretch;
   overflow: auto;
-  transition: margin-left 0.3s;
+  transition: none;
   width: 100%; /* Ensure full width for the content */
 }
 
@@ -45,7 +46,7 @@ body, .main-container, .dashboard {
   align-items: stretch; /* Stretch the container to fill the width */
   justify-content: flex-start;
   overflow: auto;
-  transition: margin-left 0.3s;
+  transition: none;
   width: 100%; /* Ensure the content container takes full width */
   border: 2px solid;
   border-color: azure;
@@ -74,6 +75,16 @@ td {
 }
 
 table {
+  border-spacing: 0 !important;
+  border-collapse: collapse !important;
+}
+.specific-component td {
+  padding: 0 !important;
+  margin: 0 !important;
+  border: none !important;
+}
+
+.specific-component table {
   border-spacing: 0 !important;
   border-collapse: collapse !important;
 }
