--- a/src/components/ChartComponent/Chart.css
+++ b/src/components/ChartComponent/Chart.css
@@ -40,8 +40,9 @@
 }
 
 .ticker-title {
-  font-size: 1rem;
-  color: #ffffff;
-  /*margin-left: 10px;*/
-  text-align: right;
+  font-size: 2rem;
+  font-weight: bold;
+  color: lightblue; 
+  margin-left: 63px;
+  text-align: center;
 }
