--- a/src/components/PositionsComponent/Positions.css
+++ b/src/components/PositionsComponent/Positions.css
@@ -18,6 +18,7 @@
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 1rem; /* Space below title */
+  color: lightblue;
 }
 
 .positions-header, .positions-item {
