changed a color for eman

--- a/src/components/SidebarComponent/Sidebar.css
+++ b/src/components/SidebarComponent/Sidebar.css
@@ -2,7 +2,7 @@
   --c-border: #9F2042;
   --c-background: #E3E4DB;
   --c-text: #441151;
-  --c-hover-border: #00ff00; /* Green color for hover border */
+  --c-hover-border: #00ff0f; /* Green color for hover border */
 }
 
 body {
