--- a/src/components/ChartComponent/Chart.css
+++ b/src/components/ChartComponent/Chart.css
@@ -15,17 +15,15 @@
   z-index: 10;
   display: flex;
   align-items: center;
-  pointer-events: none; /* Ensures that the chart remains interactive */
+  pointer-events: all; /* Ensures that the chart remains interactive */
 }
-
 .timeframes-container {
   display: flex;
   margin-right: 15px;
-  pointer-events: all; /* Enables interaction with buttons */
 }
 
 .timeframe-button {
-  padding: 0.2rem 0.4rem;
+  padding: 0.4rem 0.8rem;
   margin-right: 0.3rem;
   border-radius: 0.25rem;
   background-color: #4a5568;
@@ -39,10 +37,32 @@
   background-color: #3182ce;
 }
 
+.chart-type-container {
+  display: flex;
+  margin-left: 15px;
+}
+
+.chart-type-button {
+  padding: 0.4rem 0.8rem;
+  border-radius: 0.25rem;
+  background-color: #4a5568;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 0.8rem;
+  pointer-events: all;
+  align-items: right;
+}
+
 .ticker-title {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bold;
-  color: lightblue; 
-  margin-left: 63px;
+  color: lightblue;
   text-align: center;
+  padding-right: 16px;
+}
+
+.tv-lightweight-charts {
+  width: 100%; /* Ensure the chart fills the container */
+  height: 100%; /* Ensure the chart fills the container */
 }
