--- a/src/components/ChartComponent/Chart.css
+++ b/src/components/ChartComponent/Chart.css
@@ -24,7 +24,7 @@
 
 .timeframe-button {
   padding: 0.4rem 0.8rem;
-  margin-right: 0.3rem;
+  /*margin-right: 0.3rem;*/
   border-radius: 0.25rem;
   background-color: #4a5568;
   color: white;
